styles.css
/*--------------------
General Style
---------------------*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

body,
html {
  height: 100%;
  font-family:'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  background-color: #e4dbc0;
}



/*--------------------
Screen
---------------------*/

.screen {
  width: 1000px;
  height: 606.25px;
  position: absolute;
  top: 50%;
  left: 50%;
  background: #272625;
  overflow: hidden;
  
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  
  -webkit-box-shadow: 30px 30px 48px rgba(31,78,95,0.4);
     -moz-box-shadow: 30px 30px 48px rgba(31,78,95,0.4);
          box-shadow: 30px 30px 48px rgba(31,78,95,0.4);
}

@media (max-width: 1050px) {
  .screen {
    width: 100%;
    height: auto;
    left: 0;
    top: 0;
    transform: none;
    box-shadow: none;
  }
}

/*--------------------
Navigation
---------------------*/

.nav {
  width: 100%;
  height: 66px;
  position: fixed;
  top: -1px;
  padding: 15px 25px;
  z-index: 9999;
  background-color: #fff;
  -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
       -o-transition: all 0.3s;
          transition: all 0.3s;
}

.nav > nav {
  float: right;
}

button {
  border: none;
  text-decoration: none;
}

button:focus { 
  outline:0;
}

.button-nav {
  height: 50px;
  padding: 0px 16px;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 16px;
  line-height: 38px;
  text-align: center;
  position: relative;
  float: left;
  background-color: transparent;
  border-bottom: 5px transparent solid;
  color: rgba(0,0,0,0.6);
  
  -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
       -o-transition: all 0.3s;
          transition: all 0.3s;
}

.button-nav:hover { 
	cursor: pointer;
  height: 40px;
  color: #000;
	border-bottom: 5px #000 solid;
}

.menu-toggle {
  position: absolute;
  top: 24px;
  right: 25px;
  display: none;
  width: 50px;
  height: 50px;
  cursor: pointer;
}

.menu-toggle span {
  display: block;
  height: 2px;
  background-color: #000;
  margin-bottom: 8px;
  position: relative;
}

.menu-toggle span:last-child {
  margin-bottom: 0px;
}

.menu-toggle:hover span {
  background-color: #555;
}



/*--------------------
Page
---------------------*/

.page {
  width: 100%;
  height: 125%;
  overflow-y: scroll;
}

.section-name {
  font-size: 12px;
  letter-spacing: 1px;
  color: rgba(255,255,255,0.2);
}

.section-title {
  font-size: 36px;
  letter-spacing: -2px;
  color: #f3bf02;
  text-align: center;
  margin-bottom: 4px;
  margin-top: 10px;
}

.section-subtitle {
  text-align: center;
}

.section-subtitle a {
  height: 26px;
  font-size: 13px;
  font-style: italic;
  letter-spacing: 0px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  color: rgba(243,191,2,0.5);
  padding: 2px 8px;
  border: 1px solid rgba(243,191,2,0.5);
  
  -webkit-border-radius: 13px;
     -moz-border-radius: 13px;
          border-radius: 13px;
}

.negative {
  color: #000;  
}

/*--------------------
Hero
---------------------*/

section.hero {
  position: relative;
  height: 606.25px;
  padding: 60px;
  background: url('yellow.png');
  background-repeat: no-repeat;
  background-position: bottom center;
  background-size: cover;
  opacity: 0.75;
}

@media (max-width: 1050px) {
  section.hero {
    height: 485px;
  }
}


/*--------------------
Call To Actions
---------------------*/

.cta {
  height: 260px;
  width: 520px;
  border: 12px solid #000;
  margin-top: 80px;
  padding: 20px;
  font-weight: 800;
	letter-spacing: -3px;
  font-size: 60px;
  color: #000;
  line-height: 0.8;
  
  -webkit-box-shadow: 0px 7px 12px rgba(0,0,0,0.4);
     -moz-box-shadow: 0px 7px 12px rgba(0,0,0,0.4);
          box-shadow: 0px 7px 12px rgba(0,0,0,0.4);

  white-space: pre-line; /* prevent text from wrapping onto multiple lines */
  text-overflow: ellipsis; /* add ellipsis to indicate truncated text */
  overflow: hidden; /* hide any text that overflows the element */
        
}

.cta > span {
  font-size: 38px;
  font-weight: 600;
  margin-bottom: 100px;
}

@media screen and (max-width: 850px) {
  .cta {
    width: 95%;
    margin: 80px auto 0;
    text-align: center;
    letter-spacing: -1px;
  }
}


.button-cta, .button-nav-cta {
  padding: 2px 23px;
  font-family:'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
  color: #272625;
  
  -webkit-border-radius: 23px;
     -moz-border-radius: 23px;
          border-radius: 23px;
  
  -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
       -o-transition: all 0.3s;
          transition: all 0.3s;
}

.button-cta {
  height: 46px;
  position: absolute;
  float: right;
  left: 370px;
  bottom: 189px;
  background-color: #f3bf02;
  border: 3px solid #272625;
  font-weight: 600;
  font-size: 24px;
  letter-spacing: -1px;
  z-index: 1;
}

@media (max-width: 1050px) {
  .button-cta {
    bottom: 69px;
  }
}

@media (max-width: 600px) {
  .button-cta {
    bottom: 62px;
    font-size: 20px;
    letter-spacing: -1px;
    min-width: 170px;
    left: 50%;
    transform: translateX(-50%);
  }
}

.button-cta:hover, .button-nav-cta:hover{
  background-color: #272625;
  color: #f3bf02;
  cursor: pointer;
  
  -webkit-box-shadow: 0px 7px 12px rgba(0,0,0,0.4);
     -moz-box-shadow: 0px 7px 12px rgba(0,0,0,0.4);
          box-shadow: 0px 7px 12px rgba(0,0,0,0.4);
}

.button-cta:hover {
  border: 3px solid #f3bf02;
}

.button-nav-cta {
  margin: 1px;
  height: 40px;
  background-color: transparent;
  border: 2px solid #272625;
  font-weight: 600;
  font-size: 16px;
  display: none;
  
  -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
       -o-transition: all 0.3s;
          transition: all 0.3s;
}
/* ... */

